k8s/deployment-go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-go
  labels:
    app: devops-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-go
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devops-go
    spec:
      containers:
      - name: devops-go
        image: 3llimi/devops-go-service:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
