k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-python
  labels:
    app: devops-python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-python
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: devops-python
    spec:
      containers:
      - name: devops-python
        image: 3llimi/devops-info-service:2026.02.11-89e5033
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
