k8s/service-go.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-go-service
  labels:
    app: devops-go
spec:
  type: ClusterIP
  selector:
    app: devops-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
