k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - devops.local
    secretName: devops-tls
  rules:
  - host: devops.local
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: devops-python-service
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: devops-go-service
            port:
              number: 80
